--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -202,27 +202,27 @@ jobs:
   #       env:
   #         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
 
-  publish-cdn:
-    runs-on: ubuntu-latest
-    # needs: [pre-check, test, plugin-test]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: '15.x'
-      - name: Install
-        run: |
-          npm ci
-      - name: Build
-        run: |
-          npm run build toastmark
-          npm run build editor
-      - name: Publish CDN
-        run: |
-          npm run publish:cdn
-        env:
-          TOAST_CLOUD_TENENTID: ${{ secrets.TOAST_CLOUD_TENENTID }}
-          TOAST_CLOUD_STORAGEID: ${{ secrets.TOAST_CLOUD_STORAGEID }}
-          TOAST_CLOUD_USERNAME: ${{ secrets.TOAST_CLOUD_USERNAME }}
-          TOAST_CLOUD_PASSWORD: ${{ secrets.TOAST_CLOUD_PASSWORD }}
+  # publish-cdn:
+  #   runs-on: ubuntu-latest
+  #   needs: [pre-check, test, plugin-test]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Use Node.js 15.x
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: '15.x'
+  #     - name: Install
+  #       run: |
+  #         npm ci
+  #     - name: Build
+  #       run: |
+  #         npm run build toastmark
+  #         npm run build editor
+  #     - name: Publish CDN
+  #       run: |
+  #         npm run publish:cdn
+  #       env:
+  #         TOAST_CLOUD_TENENTID: ${{ secrets.TOAST_CLOUD_TENENTID }}
+  #         TOAST_CLOUD_STORAGEID: ${{ secrets.TOAST_CLOUD_STORAGEID }}
+  #         TOAST_CLOUD_USERNAME: ${{ secrets.TOAST_CLOUD_USERNAME }}
+  #         TOAST_CLOUD_PASSWORD: ${{ secrets.TOAST_CLOUD_PASSWORD }}
