--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -204,7 +204,7 @@ jobs:
 
   publish-cdn:
     runs-on: ubuntu-latest
-    needs: [pre-check, test, plugin-test]
+    # needs: [pre-check, test, plugin-test]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 15.x
