--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -91,63 +91,60 @@ jobs:
   #       run: |
   #         npm run test:ci uml
 
-  # doc:
-  #   runs-on: ubuntu-latest
-  #   # needs: [pre-check, test, plugin-test]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Check the package version
-  #       id: check
-  #       uses: PostHog/check-package-version@v2
-  #       with:
-  #         path: ./apps/editor/
-  #     - name: Use Node.js 15.x
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: '15.x'
-  #     - name: Install
-  #       run: |
-  #         npm ci
-  #     - name: Use Node.js 10.x
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: '10.x'
-  #     - name: Install @toast-ui/doc
-  #       run: |
-  #         npm i -g @toast-ui/doc
-  #     - name: Build
-  #       run: |
-  #         npm run build toastmark
-  #         npm run build editor
-  #     - name: Run doc
-  #       run: |
-  #         npm run doc
-  #         mv ./apps/editor/_${{ steps.check.outputs.committed-version }} ${{ steps.check.outputs.committed-version }}
-  #         mv ./apps/editor/_latest latest
-  #         rm -rf apps/editor/tmpdoc
-  #         git checkout -- apps/editor/types/index.d.ts
-  #         git add ${{ steps.check.outputs.committed-version }}/dist -f
-  #         git add latest/dist -f
-  #         git stash --include-untracked
-  #     - name: Checkout gh-pages
-  #       uses: actions/checkout@v2
-  #       with:
-  #         ref: gh-pages
-  #     - name: Commit files
-  #       run: |
-  #         git config --local user.email 'js87zz.lee@nhn.com'
-  #         git config --local user.name 'js87zz'
-  #         rm -rf ${{ steps.check.outputs.committed-version }}
-  #         rm -rf latest
-  #         git add .
-  #         git stash pop
-  #         git add .
-  #         git commit -m '${{ steps.check.outputs.committed-version }}'
-  #     - name: Push changes
-  #       uses: ad-m/github-push-action@master
-  #       with:
-  #         github_token: ${{ secrets.GITHUB_TOKEN }}
-  #         branch: gh-pages
+  doc:
+    runs-on: ubuntu-latest
+    # needs: [pre-check, test, plugin-test]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Check the package version
+        id: check
+        uses: PostHog/check-package-version@v2
+        with:
+          path: ./apps/editor/
+      - name: Use Node.js 15.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: '15.x'
+      - name: Install
+        run: |
+          npm ci
+      - name: Use Node.js 10.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      - name: Install @toast-ui/doc
+        run: |
+          npm i -g @toast-ui/doc
+      - name: Build
+        run: |
+          npm run build toastmark
+          npm run build editor
+      - name: Run doc
+        run: |
+          npm run doc
+          mv apps/editor/_latest latest
+          rm -rf apps/editor/tmpdoc
+          git checkout -- apps/editor/types/index.d.ts
+          git add latest/dist -f
+          git stash --include-untracked
+      - name: Checkout gh-pages
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+      - name: Commit files
+        run: |
+          git config --local user.email 'js87zz.lee@nhn.com'
+          git config --local user.name 'js87zz'
+          rm -rf latest
+          git add .
+          git stash pop
+          git add .
+          git commit -m '${{ steps.check.outputs.committed-version }}'
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
 
   # publish:
   #   runs-on: ubuntu-latest
@@ -202,27 +199,27 @@ jobs:
   #       env:
   #         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
 
-  publish-cdn:
-    runs-on: ubuntu-latest
-    # needs: [pre-check, test, plugin-test]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: '15.x'
-      - name: Install
-        run: |
-          npm ci
-      - name: Build
-        run: |
-          npm run build toastmark
-          npm run build editor
-      - name: Publish CDN
-        run: |
-          npm run publish:cdn
-        env:
-          TOAST_CLOUD_TENENTID: ${{ secrets.TOAST_CLOUD_TENENTID }}
-          TOAST_CLOUD_STORAGEID: ${{ secrets.TOAST_CLOUD_STORAGEID }}
-          TOAST_CLOUD_USERNAME: ${{ secrets.TOAST_CLOUD_USERNAME }}
-          TOAST_CLOUD_PASSWORD: ${{ secrets.TOAST_CLOUD_PASSWORD }}
+  # publish-cdn:
+  #   runs-on: ubuntu-latest
+  #   needs: [pre-check, test, plugin-test]
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Use Node.js 15.x
+  #       uses: actions/setup-node@v1
+  #       with:
+  #         node-version: '15.x'
+  #     - name: Install
+  #       run: |
+  #         npm ci
+  #     - name: Build
+  #       run: |
+  #         npm run build toastmark
+  #         npm run build editor
+  #     - name: Publish CDN
+  #       run: |
+  #         npm run publish:cdn
+  #       env:
+  #         TOAST_CLOUD_TENENTID: ${{ secrets.TOAST_CLOUD_TENENTID }}
+  #         TOAST_CLOUD_STORAGEID: ${{ secrets.TOAST_CLOUD_STORAGEID }}
+  #         TOAST_CLOUD_USERNAME: ${{ secrets.TOAST_CLOUD_USERNAME }}
+  #         TOAST_CLOUD_PASSWORD: ${{ secrets.TOAST_CLOUD_PASSWORD }}
