--- a/apps/react-editor/package.json
+++ b/apps/react-editor/package.json
@@ -2,16 +2,16 @@
   "name": "@toast-ui/react-editor",
   "version": "3.0.2",
   "description": "TOAST UI Editor for React",
-  "main": "dist/toastui-react-editor.js",
   "files": [
     "dist",
     "index.d.ts"
   ],
+  "main": "dist/toastui-react-editor.js",
   "scripts": {
     "test:types": "tsc",
     "lint": "eslint .",
     "serve": "snowpack dev",
-    "build": "webpack build"
+    "build": "webpack build && rollup -c"
   },
   "homepage": "https://ui.toast.com",
   "bugs": {
