--- a/apps/dooray-react-editor/tsconfig.json
+++ b/apps/dooray-react-editor/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src/**/*.ts", "src/**/*.tsx", "index.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "../../types/**/*", "index.d.ts"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "jsx": "react",
