--- a/apps/dooray-react-editor/package.json
+++ b/apps/dooray-react-editor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toast-ui/dooray-react-editor",
-  "version": "3.1.5",
+  "version": "3.1.6",
   "description": "TOAST UI Editor for Dooray!",
   "files": [
     "dist",
@@ -36,5 +36,8 @@
   },
   "dependencies": {
     "@toast-ui/editor": "^3.1.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
